<resources>
    <string name="app_name">TaskSY</string>
    <string name="phoneString">手机号</string>
    <string name="verification_code">输入验证码</string>
    <string name="consent_protocol">同意用户协议</string>
    <string name="login">立即登陆</string>
    <string name="register">立即注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
