<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    tools:context=".ui.activity.LoginActivity">
    <ImageView
        android:id="@+id/img_return"
        android:layout_margin="20dp"
        android:src="@mipmap/goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ImageView>
    <ImageView
        android:layout_alignParentRight="true"
        android:background="@mipmap/lgoin_im"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ImageView>
    <TextView
        android:id="@+id/zhdl"
        android:layout_marginTop="250dp"
        android:text="账号登陆"
        android:textSize="25sp"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <LinearLayout
        android:id="@+id/lay_a"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_ed_sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/zhdl"
        android:layout_width="280dp"
        android:layout_height="45dp">


        <EditText
            android:inputType="phone"
            android:lines="1"
            android:layout_marginLeft="60dp"
            android:textColorHint="@color/colorTextGray"
            android:hint="@string/phoneString"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_b"
        android:layout_below="@id/lay_a"
        android:background="@drawable/login_ed_sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_width="280dp"
        android:layout_height="45dp">
        <EditText
            android:layout_marginLeft="60dp"
            android:hint="@string/verification_code"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></EditText>
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:text="点击发送"
            android:textColor="@color/colorOrange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/register"
        android:textColor="@color/colorOrange"
        android:layout_below="@id/lay_b"
       android:background="@drawable/login_ed_sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_width="280dp"
        android:layout_height="45dp"></Button>


</RelativeLayout>